--- a/prepros.config
+++ b/prepros.config
@@ -912,13 +912,6 @@
         }
       }
     },
-    "files": [
-      {
-        "file": "sass/main.scss",
-        "config": {
-          "customOutput": "css\\main.css"
-        }
-      }
-    ]
+    "files": []
   }
 }
